@@ -2900,6 +2900,10 @@ operator|&&
 name|ch
 operator|!=
 literal|'\\'
+operator|&&
+name|ch
+operator|!=
+literal|'\u2028'
 operator|)
 operator|||
 name|ch
@@ -3030,6 +3034,17 @@ operator|.
 name|write
 argument_list|(
 literal|'f'
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+literal|'\u2028'
+case|:
+name|unicodeEscape
+argument_list|(
+name|writer
+argument_list|,
+name|ch
 argument_list|)
 expr_stmt|;
 break|break;
